start to code admin

--- a/nginx/src/index.html
+++ b/nginx/src/index.html
@@ -1,1 +1,21 @@
-nginx
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Weather Report</title>
+</head>
+<body>
+<h1>Главная</h1>
+<p>Веб-сайт для получения данных о прогнозе погоды</p>
+<div>
+    <a href="about.html">О нас</a>
+    <a href="index.php">Прогноз</a>
+</div>
+<img src="Weather_Report.webp"/>
+<div>
+    <a href="/admin/admin.php">Незаметная ссылка, ведущая в админку</a>
+</div>
+</body>
+</html>
