--- a/nginx/src/index.html
+++ b/nginx/src/index.html
@@ -16,6 +16,7 @@
 <img src="Weather_Report.webp"/>
 <div>
     <a href="/admin/admin.php">Незаметная ссылка, ведущая в админку</a>
+    <a href="/file.php">Файлы</a>
 </div>
 </body>
 </html>
