--- a/nginx/src/index.html
+++ b/nginx/src/index.html
@@ -17,6 +17,7 @@
 <div>
     <a href="/admin/admin.php">Незаметная ссылка, ведущая в админку</a>
     <a href="/file.php">Файлы</a>
+    <a href="/graphs.php">Графики</a>
 </div>
 </body>
 </html>
